src/App.css
#root {
  background-color: var(--pale-purple);
  width: var(--phone-width);
  height: var(--phone-height);
  display: block;
  position: absolute;
  overflow-y: scroll;
  scrollbar-width: none; /* hides scrollbar */
  -ms-overflow-style: none; /* hides scrollbar in IE 10+ */
}

/* For Webkit browsers (Chrome, Safari) */
#root::-webkit-scrollbar {
  width: 0px;
  background: transparent; /* optional, just makes it invisible */
}

.header {
  position: fixed;
  top: 0;
  display: flex;
  width: var(--phone-width);
  background-color: var(--pale-purple);
  padding: 18px 18px 8px;
  z-index: 99;
}

.header h1.page-title {
  font-weight: 400;
  line-height: 20px;
  font-size: 20px;
  margin-right: 16px;
  margin-top: 4px;
}

.header .corner-coverings {
  position: absolute;
  width: calc(100% - 36px);
  top: 54px;
  display: flex;
  justify-content: space-between;
}

.header .corner-coverings .corner {
  width: 16px;
  height: auto;
}

main.notes-list {
  display: flex;
  flex-direction: column;
  gap: 10px;
  padding: 8px 18px 18px;
  margin-top: 51px; /* offset header */
  margin-bottom: 78px; /* offset nav */
}

